# aurora-blake2

./: Cargo.toml
benches/: mod.rs
examples/: blake2b_sum.rs  blake2s_sum.rs
src/: lib.rs  macros.rs  simd.rs
tests/: compression.rs  lib.rs  mac.rs  mod.rs  persona.rs
