[package]
name = "aurora-blake2"
version = "0.10.4"
description = "BLAKE2 hash functions"
authors = [
    "RustCrypto Developers",
    "Near Inc <hello@nearprotocol.com>",
    "Aurora Labs <hello@aurora.dev>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
keywords = ["crypto", "blake2", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = { version = "0.10.3", features = ["mac"] }

[dev-dependencies]
digest = { version = "0.10.3", features = ["dev"] }
hex-literal = "0.2.2"

[features]
default = ["std"]
std = ["digest/std"]
reset = [] # Enable reset functionality
simd = []
simd_opt = ["simd"]
simd_asm = ["simd_opt"]
